syntax = "proto3";

option java_package = "cn.beckbi.pb";
option java_outer_classname = "AdInfo";



message Ad {
  int32 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}
message AdList {
  string createAt = 1;
  string traceId = 2;
  repeated Ad ads = 3;
}

message AdIdList{
  repeated int32 id =1;
}

service AdStream {
  //stream
  rpc addAdList(stream AdList) returns(AdIdList);
  rpc getAdList(AdIdList) returns(stream AdList);

}
